Fix endpoints API Doc
